theme/styles/shared.scss
/* Elements */
/* ========================================================================== */

:root {
  --super-light-grey: #f9f9f9;
  --super-light-grey2: #fcfcfc;
  --color-black-mine-shaft: #292929;
  --medium-grey: #707070;
  --dark-grey: #282e36;
  --wolf-blue: #016099;
  --medium-blue: #4eb2dd;
  --dark-blue: #00446c;
  --light-electric-blue: #a7e4ea;
  /*
   * As "EB Garamond" is a small font, if we want the same height as a classic
   * font we should set 1.2 rem. As it its hight of an lowercase letter is 8px.
   * Compared with font "Segeo UI" used into Bootstrap website.
   */
  --font-serif: 'EB Garamond', serif;
}

body {
  font-family: 'Montserrat', sans-serif;
}

img {
  width: 100%;
}

/* Titles */
/* Note: all titles should have a serif font */
/* ========================================================================== */

.title-1 {
  font-family: var(--font-serif);
  color: var(--medium-grey);
  font-weight: bold;
  font-size: 1.4rem;
}

.title {
  font-size: 2rem;
  color: var(--wolf-blue);
  font-weight: 600;
  padding-left: 1.9rem;
}

.title .tag {
  font-size: 0.8em;
  margin-left: 2em;
}

@media (max-width: 991px) {
  .article-title {
    margin-top: 3rem;
  }
}

.title::before {
  content: '';
  position: absolute;
  height: 0.3rem;
  width: 1.5rem;
  background-color: var(--light-electric-blue);
  margin-top: 1.25rem;
  margin-left: -2.25rem;
}

/* As Bootstrap 4 Grid System                                                 */
/* See also https://getbootstrap.com/docs/4.0/layout/grid/#grid-options       */
/* ========================================================================== */

.maincolumn {
  margin: 0 auto 0 auto;
  box-sizing: border-box;
}

@media (max-width: 575px) {
  .maincolumn {
    width: 100%;
    max-width: 100%;
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

@media (min-width: 576px) {
  .maincolumn {
    max-width: 525px;
  }
}

@media (min-width: 768px) {
  .maincolumn {
    max-width: 705px;
  }
}

@media (min-width: 992px) {
  .maincolumn {
    max-width: 945px;
  }
}

@media (min-width: 1200px) {
  .maincolumn {
    max-width: 1125px;
  }
}

/* Shared between footer and header                               */
/* ========================================================================== */

footer a,
footer a:hover,
header a,
header a:hover {
  text-decoration: none;
}

footer ul,
header ul {
  list-style-type: none;
}

/* Button  with:
/* * an animation on hoover, a grey slide appears from right */
/* * small “>” on its right (svg) */
/* * grey Border */
/* On the blog, currenctly (04/2020) used in the footer into "Contactez-nous" */
/* ========================================================================== */

.btn-dark-grey {
  position: relative;
  display: block;
  z-index: 0;

  padding: 1rem 1.5rem;

  /*
    On Chromium (not on Firefox), don't use `rem` because otherwise
    `.btn-dark-grey::after` (with `position: absolute`) don't fit content of
    `.btn-dark-grey` (its parent). It's because in this case on Chromium, the
    `border-size` should be a whole number
    (NOT something like `.btn-dark-grey {border-size: 3.2px}`).
    Probably on Chromium, in this case there is a bug with pixel number rounded.
   */
  border: 3px solid var(--medium-grey);

  font-size: 0.9rem;
  font-weight: 600;
  color: var(--medium-grey);

  transition: color 0.3s;
}
.btn-dark-grey:hover {
  color: white;
}

.btn-dark-grey-svg {
  width: 0.5rem;
  margin-left: 1.5rem;
  stroke: var(--medium-grey);
  transition: stroke 0.5s;
}
.btn-dark-grey:hover > .btn-dark-grey-svg {
  stroke: white;
}

.btn-dark-grey-svg-path {
  fill: none;
  stroke-width: 3;
}

.btn-dark-grey::after {
  content: '';
  background-color: var(--medium-grey);

  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  height: 100%;

  width: 0;
  transition: width 0.3s;
}

.btn-dark-grey:hover::after {
  width: 100%;
}

/* The small blue bar                                                         */
/* ========================================================================== */

.bar-deco {
  position: relative;

  /* For "Contact" */
  justify-self: start;

  /* For "Services" and "L'entreprise" */
  display: inline-block;

  padding-right: 1.5rem;
  z-index: 0;
  margin-top: 1em;
  margin-bottom: 1em;
}

/* The small blue bar */
.bar-deco::after {
  content: '';
  position: absolute;
  display: block;
  z-index: -1;

  top: 0.9em;
  right: 0;

  width: 2.5em;
  height: 0.5em;
  background-color: var(--light-electric-blue);
}

/* The small blue bar that appears on hover of links */
/* Needs `title-bar-decoration` */
/* ==== */
.bar-deco-hover::after {
  /* istead of using rule `right: 0`, because otherwise
    transition start from the right to the left
     */
  left: calc(100% - 3.5em);
  width: 0;
  transition: width 0.3s;
}

.bar-deco-hover:hover::after {
  width: 2.5rem;
}

/* tag                                                                        */
/* ========================================================================== */

.tags-list {
  list-style: none;
  padding-left: 0;
}

:root {
  --tag-background-color: #999999;
}

.tag {
  color: #fff;
  display: inline;
  background: var(--tag-background-color);
  display: inline-block;
  position: relative;
  padding-left: 0.7em;
  padding-right: 0.5em;
  margin-left: 0.8em;
  margin-bottom: 0.1rem;
  border-top-right-radius: 0.3em;
  border-bottom-right-radius: 4px;
  text-decoration: none;
}

/* Note: can not be in .tag to get priority on reboot */
.tag a {
  color: #fff;
}

/* Left arrow */
.tag:before {
  display: inline-block;
  border-width: 0.75em;
  border-style: solid;
  border-color: transparent var(--tag-background-color) transparent transparent;
  height: 1.5em;
  width: 1.5em;
  position: absolute;
  left: -1.5em;
  top: 0;
  content: '';
  display: inline-block;
}

/* Dot */
.tag:after {
  background: #fff;
  width: 0.3em;
  height: 0.3em;
  content: '';
  display: inline-block;
  border-radius: 0.2em;
  margin: 0;
  margin-left: -0.3em;
  top: 0.6em;
  left: 0;
  position: absolute;
}

